# cards

./: .gitignore  .gitmodules  .projectile  Earley.json  README.md  build  build-backend.sh  build-both.sh  build-common.sh  build-desktop-linux.sh  build-desktop.sh  build-frontends.sh  build-ghc-common.sh  build-ghc-frontend.sh  build-ghc.sh  build-ghcjs-common.sh  build-ghcjs.sh  build-webapp.sh  cabal-ghcjs.project  cabal.project  cards-frontend.nix  check-nix.sh  clean.sh  default.nix  dependencies-of-android.txt  dependencies-of-desktop.txt  dependencies-of-webapp.txt  dependencies.sh  develop-webapp.sh  develop.sh  doctest.sh  editor.sh  emulate.nix  environment-ghc.sh  environment-ghcjs.sh  execute-desktop-default.sh  execute-desktop-linux.sh  execute-webapp.sh  foldl.json  frisby.json  (+43 more)
cards-backend/: README.md  cards-backend.cabal  default.nix
cards-backend/benchmarks/: Bench.hs
cards-backend/data/json/: RIXSets-z.json  SetCodes.json  SetList.json  XLN-RIX-y.json  all-subtypes.txt  jq.txt  shrink-cards.sh  shrink-sets.sh  subtypes.sh  types.sh  watermarks.sh
cards-backend/executables/: Main.hs
cards-backend/sources/Cards/: Backend.hs
cards-backend/sources/Cards/Backend/: Core.hs  Example.hs  Extra.hs  Types.hs
cards-backend/tests/: DocTests.hs  HLintTest.hs  PropertyTests.hs  TemplateHaskellTests.hs  UnitTests.hs
cards-backend/tests/Cards/Backend/: Property.hs  Test.hs
cards-common/: CHANGELOG.md  README.md  cards-common.cabal  default.nix  reconfigure.sh  run.sh
cards-common/benchmarks/: Bench.hs
cards-common/data/json/: RIXSets-y.json  version.json
cards-common/executables/: Main.hs
cards-common/scripts/: find-unicode.sh
cards-common/sources/: MTGJSON.hs  Mixfix.hs  Operators.hs  Paths_cards_common.hs  REPL_Cards_Common.hs  Tokenize.hs
cards-common/sources/Cards/: Common.hs  Query.hs
cards-common/sources/Cards/Common/: Core.hs  Example.hs  Extra.hs  Syntax.hs  Types.hs  UnicodeShow.hs
cards-common/sources/Cards/MTGJSON/: Aeson.hs  ByteStringLiterals.hs  Example.hs  Macros.hs  Paths.hs  Schema.hs
cards-common/sources/Cards/Query/: Types.hs
cards-common/sources/Cards/Syntax/: Extra.hs  MagicCardsInfo.hs  Operators.hs
cards-common/sources/Cards/Syntax/MagicCardsInfo/: Compiler.hs  Known.hs  Parser.hs  Printer.hs  Static.hs  Types.hs  Validator.hs
cards-common/sources/Control/Foldl/: Summary.hs
cards-common/sources/Data/: Fuzzy.hs
cards-common/sources/MTGJSON/: Aeson.hs  AllSets.hs  Constants.hs  Core.hs  Example.hs  Extra.hs  Kinds.hs  Known.hs  Macros.hs  Main.hs  Parser.hs  Paths.hs  Printer.hs  Schema.hs  SetList.hs  Types.hs  Validate.hs  Version.hs
cards-common/sources/MTGJSON/AllSets/: Booster.hs  Card.hs  Constants.hs  Core.hs  Enums.hs  Fold.hs  Kinds.hs  Lens.hs  Object.hs  Oracle.hs  Orphans.hs  Schema.hs  Set.hs  Types.hs  Validate.hs
cards-common/sources/MTGJSON/AllSets/Card/: Lens.hs  Schema.hs
cards-common/sources/MTGJSON/AllSets/Enums/: Block.hs  Border.hs  Cardtype.hs  Color.hs  Edition.hs  Format.hs  Frame.hs  Keyword.hs  Language.hs  Layout.hs  Legality.hs  Mana.hs  Name.hs  Rarity.hs  Subtype.hs  Supertype.hs  Symbol.hs  Watermark.hs
cards-common/sources/MTGJSON/AllSets/Object/: Lens.hs  Schema.hs
cards-common/sources/MTGJSON/AllSets/Set/: Lens.hs  Schema.hs
cards-common/sources/MTGJSON/Known/: Lens.hs  Newtypes.hs  Types.hs
cards-common/sources/MTGJSON/Printer/: Finite.hs
cards-common/tests/: DocTests.hs  HLintTest.hs  PropertyTests.hs  TemplateHaskellTests.hs  UnitTests.hs
cards-common/tests/Cards/Common/: Property.hs  Test.hs
cards-desktop-linux/: Main_WebKitGTK.hs  cards-desktop-linux.cabal  default.nix
cards-frontend/: .dir-locals.el  LICENSE  README.md  cards-frontend.cabal  default.nix  develop.nix  reconfigure.sh
cards-frontend/benchmarks/: Bench.hs
cards-frontend/executables/: JSaddleWebSocketsReloader.hs  JSaddleWebSocketsRunner.hs  Main.hs  Main_Browser.hs  Main_Development.hs  Main_Warp.hs  Main_WebkitGTK.hs  Main_Webview.hs  Run.hs
cards-frontend/sources/: JSaddleWebSocketsReloader.hs  JSaddleWebSocketsRunner.hs
cards-frontend/sources/Cards/: AllCards.hs  Frontend.hs
cards-frontend/sources/Cards/Frontend/: Application.hs  ButtonGroup.hs  Core.hs  DB.hs  Development.hs  Event.hs  Example.hs  Extra.hs  GUI.hs  Main.hs  Query.hs  Result.hs  Runner.hs  Search.hs  Types.hs  Widgets.hs
cards-frontend/static/css/: card.css  style.css
cards-frontend/tests/: DocTests.hs  PropertyTests.hs  UnitTests.hs
cards-frontend/tests/Cards/Frontend/: Property.hs  Test.hs
emacs-for-reflex/: default.nix  init.el  notes.txt
metadata/: dependencies-of-backend.txt  dependencies.dot
nix/: deepseq-1.4.3.json  reflex-dom-contrib.nix
prototypes/: card.html  image-grid.html
prototypes/simple/: card.css  card.html  text-grid.html
prototypes/tesseract/: MainComponent.purs  index.css  index.html
scripts/: initialize.sh
static/: style.css
